--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sonya Gopinath Portfolio</title>
+  <title>Sonya's Portfolio</title>
   <style>
     body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; background: #f9f9f9; color: #333; }
     header, section { padding: 40px 20px; max-width: 900px; margin: auto; }
@@ -18,7 +18,7 @@
 
   <nav>
     <a href="#home">Home</a>
-    <a href="#project">Capital Correction</a>
+    <a href="#project">Capital Correction Project</a>
     <a href="#volunteering">Volunteering</a>
     <a href="#cv">CV</a>
     <a href="#certifications">Certifications</a>
@@ -28,8 +28,8 @@
 
   <section id="home" class="section-content">
     <h2>Welcome</h2>
-    <p>I'm Sonya Gopinath — a sustainability analyst and economist-in-training passionate about embedding climate logic into financial systems. I use tools like R, Python, and Shiny to build strategy models and visual tools that demonstrate the real economic risks of inaction on emissions.</p>
-    <img src="headshot.jpg" alt="Headshot of Sonya Gopinath" />
+    <p>I'm Sonya Gopinath - a researcher, economist, data analyst and a growing sustainability analyst. I recently graduated from the London School of Economics with an MSc in Environmental Economics, while chasing my passion for embedding climate logic into financial systems. </p>
+    <img src="sonya profile.jpg" alt="Headshot of Sonya Gopinath" />
   </section>
 
   <section id="project" class="section-content">
