--- a/index.html
+++ b/index.html
@@ -5,70 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sonya's Portfolio</title>
   <style>
-    body {
-      font-family: Cambria, serif;
-      line-height: 1.6;
-      margin: 0;
-      padding: 0;
-      background: #f9f9f9;
-      color: #333;
-    }
-    header, section {
-      padding: 40px 20px;
-      max-width: 900px;
-      margin: auto;
-    }
-    h1, h2 {
-      color: #004b6e;
-      margin-bottom: 15px;
-    }
-    nav {
-      background: #004b6e;
-      color: white;
-      padding: 15px 10px;
-      text-align: center;
-    }
-    nav a {
-      color: white;
-      margin: 0 20px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    .section-content {
-      background: white;
-      padding: 25px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      margin-bottom: 40px;
-    }
-    iframe, img {
-      max-width: 100%;
-      height: auto;
-      border: none;
-    }
-    .profile-img {
-      border-radius: 50%;
-      margin-top: 20px;
-    }
-    .witty-text {
-      font-style: italic;
-      color: #777;
-      margin-top: 10px;
-    }
-    .button-link {
-      background-color: #004b6e;
-      color: white;
-      padding: 8px 20px;
-      text-decoration: none;
-      border-radius: 5px;
-      font-weight: bold;
-    }
-    .button-link:hover {
-      background-color: #00628d;
-    }
+    body { font-family: Calibri, sans-serif; background: #f5f5f5; color: #333; margin: 0; padding: 0; line-height: 1.6; }
+    header, section { padding: 40px 20px; max-width: 1000px; margin: auto; }
+    h1, h2 { color: #232; font-weight: 600; }
+    nav { background: #232; color: white; padding: 10px 20px; text-align: center; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); }
+    nav a { color: white; margin: 0 20px; text-decoration: none; font-weight: bold; transition: color 0.3s; }
+    nav a:hover { color: #f7b731; }
+    .container { display: flex; flex-wrap: wrap; gap: 30px; justify-content: center; }
+    .section-content { background: white; padding: 20px; border-radius: 12px; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); flex-basis: 45%; }
+    .section-content img { width: 100%; height: auto; border-radius: 8px; }
+    iframe { width: 100%; height: 500px; border: none; border-radius: 8px; }
+    ul { padding-left: 20px; }
+    .cta-link { display: inline-block; margin-top: 15px; color: #232; text-decoration: none; font-weight: 500; }
+    .cta-link:hover { color: #f7b731; }
   </style>
 </head>
 <body>
@@ -85,50 +34,51 @@
 
   <section id="home" class="section-content">
     <h2>Welcome</h2>
-    <p>I'm Sonya Gopinath—a researcher, economist, data analyst, and a passionate advocate for integrating climate logic into financial systems. I recently graduated with an MSc in Environmental Economics from the London School of Economics, and I’m on a mission to help reshape sustainability and economics for a better world.</p>
-    <img src="sonya profile 2.jpg" alt="Headshot of Sonya Gopinath" class="profile-img" width="200" height="200" />
+    <p>I'm Sonya Gopinath - a researcher, economist, data analyst, and a growing sustainability analyst. I recently graduated from the London School of Economics with an MSc in Environmental Economics, while chasing my passion for embedding climate logic into financial systems. </p>
+    <img src="sonya_profile_2.jpg" alt="Headshot of Sonya Gopinath" width="200" height="200" />
   </section>
 
-  <section id="project" class="section-content">
-    <h2>The Capital Correction Project</h2>
-    <p>This interactive Shiny tool models the financial consequences of emissions and environmental degradation over a 10-year horizon. It’s designed for internal strategy teams and ESG investors to simulate decision-making in industries like steel, where environmental choices drive long-term profitability.</p>
-    <p><a href="https://carboncostsim-by-sonya.shinyapps.io/personal_esg_project/" target="_blank" class="button-link">Launch the Live Model</a></p>
-    <p><a href="https://github.com/sonyagopinath/capital-correction-model" target="_blank" class="button-link">View Code on GitHub</a></p>
-  </section>
+  <div class="container">
+    <section id="project" class="section-content">
+      <h2>The Capital Correction Project</h2>
+      <p>This interactive Shiny tool models how emissions and poor environmental choices lead to financial penalties over a 10-year horizon. It’s built for internal strategy teams and ESG investors to simulate decisions in the steel sector.</p>
+      <a href="https://carboncostsim-by-sonya.shinyapps.io/personal_esg_project/" target="_blank" class="cta-link">Launch the Live Model</a><br>
+      <a href="https://github.com/sonyagopinath/capital-correction-model" target="_blank" class="cta-link">View Code on GitHub</a>
+    </section>
 
-  <section id="volunteering" class="section-content">
-    <h2>Volunteering & Leadership</h2>
-    <p>Currently under construction—but stay tuned for stories of my work with Arthanomics, the UN Millennium Fellowship, and my hands-on involvement in improving accessibility and sustainability in India!</p>
-    <p class="witty-text">Can’t wait to share more—but I’m still working on it, just like my next big idea!</p>
-    <!-- Add images once ready -->
-    <!-- <img src="millennium_fellowship.jpg" alt="Millennium Fellowship Event" /> -->
-    <!-- <img src="arthanomics_event.jpg" alt="Arthanomics Campaign" /> -->
-  </section>
+    <section id="volunteering" class="section-content">
+      <h2>Volunteering & Leadership</h2>
+      <p>Photos from various projects with Arthanomics, the UN Millennium Fellowship, and accessibility initiatives in India:</p>
+      <img src="millennium_fellowship.jpg" alt="Millennium Fellowship Event" />
+      <img src="arthanomics_event.jpg" alt="Arthanomics Campaign" />
+      <p><a href="#" class="cta-link">More on my volunteering projects coming soon!</a></p>
+    </section>
+  </div>
 
   <section id="cv" class="section-content">
     <h2>My CV</h2>
-    <p><a href="cv_sonya_gopinath.pdf" target="_blank" class="button-link">Download My CV</a></p>
-    <iframe src="cv_sonya_gopinath.pdf" width="100%" height="500px"></iframe>
+    <a href="cv_sonya_gopinath.pdf" target="_blank" class="cta-link">Download My CV</a>
+    <iframe src="cv_sonya_gopinath.pdf"></iframe>
   </section>
 
   <section id="certifications" class="section-content">
     <h2>Certifications</h2>
     <ul>
-      <li>Python for Data Analysis – <a href="certificate_python.pdf" target="_blank">View Certificate</a></li>
-      <li>Introduction to ESG – <a href="certificate_esg.pdf" target="_blank">View Certificate</a></li>
+      <li>Python for Data Analysis – <a href="certificate_python.pdf" target="_blank" class="cta-link">View Certificate</a></li>
+      <li>Introduction to ESG – <a href="certificate_esg.pdf" target="_blank" class="cta-link">View Certificate</a></li>
     </ul>
   </section>
 
   <section id="articles" class="section-content">
     <h2>My Articles and Writing</h2>
-    <p>Explore my thoughts on sustainability, economics, and the transformative role of data and systems in creating a greener future. The first article is coming soon—stay tuned for my critiques and solutions on the outdated metrics in ESG reporting!</p>
-    <p><a href="https://medium.com/@rg.sonya22" target="_blank" class="button-link">Read more on Medium</a></p>
+    <p>My space for thought experiments, critiques, and commentary at the intersection of sustainability, economics, and systems change. These pieces reflect ongoing questions I explore about metrics, incentives, and the kind of transformation today’s world demands.</p>
+    <p><a href="https://medium.com/@rg.sonya22" target="_blank" class="cta-link">Read more on Medium</a></p>
   </section>
 
   <section id="contact" class="section-content">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:sonya.r.gopinath@gmail.com">sonya.r.gopinath@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/sonya-gopinath/" target="_blank">Sonya Gopinath</a></p>
+    <p>Email: <a href="mailto:sonya.r.gopinath@gmail.com" class="cta-link">sonya.r.gopinath@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/sonya-gopinath/" target="_blank" class="cta-link">Sonya Gopinath</a></p>
   </section>
 
 </body>
