--- a/index.html
+++ b/index.html
@@ -5,81 +5,166 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sonya's Portfolio</title>
   <style>
-    body { font-family: Calibri, sans-serif; background: #f5f5f5; color: #333; margin: 0; padding: 0; line-height: 1.6; }
-    header, section { padding: 40px 20px; max-width: 1000px; margin: auto; }
-    h1, h2 { color: #232; font-weight: 600; }
-    nav { background: #232; color: white; padding: 10px 20px; text-align: center; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); }
-    nav a { color: white; margin: 0 20px; text-decoration: none; font-weight: bold; transition: color 0.3s; }
-    nav a:hover { color: #f7b731; }
-    .container { display: flex; flex-wrap: wrap; gap: 30px; justify-content: center; }
-    .section-content { background: white; padding: 20px; border-radius: 12px; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); flex-basis: 45%; }
-    .section-content img { width: 100%; height: auto; border-radius: 8px; }
-    iframe { width: 100%; height: 500px; border: none; border-radius: 8px; }
-    ul { padding-left: 20px; }
-    .cta-link { display: inline-block; margin-top: 15px; color: #232; text-decoration: none; font-weight: 500; }
-    .cta-link:hover { color: #f7b731; }
+    :root {
+      --primary: #b9a3e3; /* lilac */
+      --background: #f9f7fc; /* light pastel */
+      --text: #1a1a1a;
+      --accent: #555;
+    }
+
+    html {
+      scroll-behavior: smooth;
+    }
+
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      background-color: var(--background);
+      color: var(--text);
+    }
+
+    header {
+      position: sticky;
+      top: 0;
+      background: white;
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 1px solid #ddd;
+      z-index: 999;
+    }
+
+    nav a {
+      margin-left: 1rem;
+      text-decoration: none;
+      color: var(--accent);
+      font-weight: 500;
+    }
+
+    section {
+      padding: 4rem 2rem;
+      max-width: 900px;
+      margin: auto;
+    }
+
+    .landing {
+      text-align: center;
+      padding-top: 6rem;
+    }
+
+    .landing h1 {
+      font-size: 3rem;
+      color: var(--primary);
+    }
+
+    .landing p {
+      font-size: 1.2rem;
+      margin-top: 1rem;
+      color: var(--accent);
+    }
+
+    .project-card {
+      background: white;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      padding: 1.5rem;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .project-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 10px 20px rgba(0,0,0,0.15);
+    }
+
+    .resume-button {
+      display: inline-block;
+      padding: 0.75rem 1.5rem;
+      background: var(--primary);
+      color: white;
+      border: none;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+
+    .resume-button:hover {
+      background: #9a80cc;
+    }
+
+    .icons a {
+      margin: 0 10px;
+      color: var(--accent);
+      font-size: 1.5rem;
+      transition: color 0.3s ease;
+    }
+
+    .icons a:hover {
+      color: var(--primary);
+    }
+
+    footer {
+      text-align: center;
+      padding: 2rem 0;
+      background: #f0edf7;
+    }
+
+    @media screen and (max-width: 600px) {
+      .landing h1 {
+        font-size: 2rem;
+      }
+    }
   </style>
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
+  <header>
+    <div><strong>Sonya</strong></div>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#resume">Resume</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-  <nav>
-    <a href="#home">Home</a>
-    <a href="#project">Capital Correction Project</a>
-    <a href="#volunteering">Volunteering</a>
-    <a href="#cv">CV</a>
-    <a href="#certifications">Certifications</a>
-    <a href="#articles">Articles</a>
-    <a href="#contact">Contact</a>
-  </nav>
-
-  <section id="home" class="section-content">
-    <h2>Welcome</h2>
-    <p>I'm Sonya Gopinath - a researcher, economist, data analyst, and a growing sustainability analyst. I recently graduated from the London School of Economics with an MSc in Environmental Economics, while chasing my passion for embedding climate logic into financial systems. </p>
-    <img src="sonya_profile_2.jpg" alt="Headshot of Sonya Gopinath" width="200" height="200" />
+  <section class="landing">
+    <h1>Sonya</h1>
+    <p>Creating data-backed strategies for a more sustainable world—one model at a time.</p>
   </section>
 
-  <div class="container">
-    <section id="project" class="section-content">
-      <h2>The Capital Correction Project</h2>
-      <p>This interactive Shiny tool models how emissions and poor environmental choices lead to financial penalties over a 10-year horizon. It’s built for internal strategy teams and ESG investors to simulate decisions in the steel sector.</p>
-      <a href="https://carboncostsim-by-sonya.shinyapps.io/personal_esg_project/" target="_blank" class="cta-link">Launch the Live Model</a><br>
-      <a href="https://github.com/sonyagopinath/capital-correction-model" target="_blank" class="cta-link">View Code on GitHub</a>
-    </section>
-
-    <section id="volunteering" class="section-content">
-      <h2>Volunteering & Leadership</h2>
-      <p>Photos from various projects with Arthanomics, the UN Millennium Fellowship, and accessibility initiatives in India:</p>
-      <img src="millennium_fellowship.jpg" alt="Millennium Fellowship Event" />
-      <img src="arthanomics_event.jpg" alt="Arthanomics Campaign" />
-      <p><a href="#" class="cta-link">More on my volunteering projects coming soon!</a></p>
-    </section>
-  </div>
-
-  <section id="cv" class="section-content">
-    <h2>My CV</h2>
-    <a href="cv_sonya_gopinath.pdf" target="_blank" class="cta-link">Download My CV</a>
-    <iframe src="cv_sonya_gopinath.pdf"></iframe>
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I'm a recent graduate from the London School of Economics with a passion for turning evidence into action. My academic and project work bridges sustainability, data, and strategy—with experience spanning environmental modelling, nonprofit outreach, and corporate research. I thrive in roles where communication, analysis, and impact intersect.</p>
   </section>
 
-  <section id="certifications" class="section-content">
-    <h2>Certifications</h2>
-    <ul>
-      <li>Python for Data Analysis – <a href="certificate_python.pdf" target="_blank" class="cta-link">View Certificate</a></li>
-      <li>Introduction to ESG – <a href="certificate_esg.pdf" target="_blank" class="cta-link">View Certificate</a></li>
-    </ul>
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="project-card">
+      <h3>The Capital Correction Project</h3>
+      <p>A strategic modelling initiative to map sustainability incentives in high-emission industries. Focused on ESG-aligned growth opportunities across the steel and cement sectors.</p>
+    </div>
   </section>
 
-  <section id="articles" class="section-content">
-    <h2>My Articles and Writing</h2>
-    <p>My space for thought experiments, critiques, and commentary at the intersection of sustainability, economics, and systems change. These pieces reflect ongoing questions I explore about metrics, incentives, and the kind of transformation today’s world demands.</p>
-    <p><a href="https://medium.com/@rg.sonya22" target="_blank" class="cta-link">Read more on Medium</a></p>
+  <section id="resume">
+    <h2>Resume</h2>
+    <a class="resume-button" href="your-resume-link.pdf" target="_blank">Download Resume</a>
   </section>
 
-  <section id="contact" class="section-content">
+  <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:sonya.r.gopinath@gmail.com" class="cta-link">sonya.r.gopinath@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/sonya-gopinath/" target="_blank" class="cta-link">Sonya Gopinath</a></p>
+    <div class="icons">
+      <a href="mailto:your.email@example.com" title="Email"><i class="fas fa-envelope"></i></a>
+      <a href="https://linkedin.com/in/yourlinkedin" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/yourgithub" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+      <a href="https://medium.com/@yourmedium" target="_blank" title="Medium"><i class="fab fa-medium"></i></a>
+    </div>
   </section>
 
+  <footer>
+    <p>&copy; 2025 Sonya. All rights reserved.</p>
+  </footer>
 </body>
 </html>
