--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 </head>
 <body>
   <header>
-    <div><strong>Sonya</strong></div>
+    <div><strong>Sonya Gopinath</strong></div>
     <nav>
       <a href="#about">About</a>
       <a href="#projects">Projects</a>
@@ -131,13 +131,13 @@
   </header>
 
   <section class="landing">
-    <h1>Sonya</h1>
-    <p>Creating data-backed strategies for a more sustainable world—one model at a time.</p>
+    <h1>Sonya Gopinath</h1>
+    <p>Creating data-backed strategies for a more sustainable world - one model at a time.</p>
   </section>
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I'm a recent graduate from the London School of Economics with a passion for turning evidence into action. My academic and project work bridges sustainability, data, and strategy—with experience spanning environmental modelling, nonprofit outreach, and corporate research. I thrive in roles where communication, analysis, and impact intersect.</p>
+    <p>I'm a recent London School of Economics graduate with a passion for turning evidence into action. My academic and project work bridges sustainability, data, and strategy, with experience spanning environmental modelling, research, nonprofit outreach, and content marketing. I thrive in roles where communication, analysis, and impact intersect.</p>
   </section>
 
   <section id="projects">
@@ -150,7 +150,7 @@
 
   <section id="resume">
     <h2>Resume</h2>
-    <a class="resume-button" href="your-resume-link.pdf" target="_blank">Download Resume</a>
+    <a class="resume-button" href="Sonya Gopinath Resume Sustainability.pdf" target="_blank">Download Resume</a>
   </section>
 
   <section id="contact">
@@ -159,12 +159,12 @@
       <a href="mailto:your.email@example.com" title="Email"><i class="fas fa-envelope"></i></a>
       <a href="https://linkedin.com/in/yourlinkedin" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
       <a href="https://github.com/yourgithub" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-      <a href="https://medium.com/@yourmedium" target="_blank" title="Medium"><i class="fab fa-medium"></i></a>
+      <a href="https://medium.com/@rg.sonya22/outdated-metrics-in-esg-reports-the-revenue-centric-ethos-7b7b6054fcd5" target="_blank" title="Medium"><i class="fab fa-medium"></i></a>
     </div>
   </section>
 
   <footer>
-    <p>&copy; 2025 Sonya. All rights reserved.</p>
+    <p>&copy; 2025 Sonya Gopinath. All rights reserved.</p>
   </footer>
 </body>
 </html>
