--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     <p>I'm a recent London School of Economics graduate passionate about turning evidence into action. My academic and project work bridges sustainability, data, and strategy, with experience spanning environmental modelling, research, nonprofit outreach, and content marketing. I thrive in roles where communication, analysis, and impact intersect.</p>
 
     <div class="profile-image">
-  <img src="your-image.jpg" alt="Profile Picture">
+  <img src="sonya profile 2.JPG" alt="Profile Picture">
 </div>
   </section>
 
