--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <title>Sonya's Portfolio</title>
   <style>
     :root {
@@ -171,27 +172,37 @@
       background: #9a80cc;
     }
 
-    .icons a {
-      margin: 0 10px;
-      color: var(--accent);
-      font-size: 1.5rem;
-      transition: color 0.3s ease;
-    }
+.icons {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+}
 
-    .icons a:hover {
-      color: var(--primary);
-    }
+.icons a {
+  margin: 0 10px;
+  color: #333; /* Or var(--accent) if using CSS variables */
+  font-size: 28px;
+  transition: color 0.3s ease, transform 0.2s ease;
+}
 
-    footer {
-      text-align: center;
-      padding: 2rem 0;
-      background: #f0edf7;
-    }
+.icons a:hover {
+  color: #7d6bb8; /* lilac hover */
+  transform: scale(1.2);
+}
 
-    @media screen and (max-width: 600px) {
-      .landing h1 {
-        font-size: 2rem;
-      }
+footer {
+  text-align: center;
+  padding: 2rem 0;
+  background: #f0edf7;
+}
+
+@media screen and (max-width: 600px) {
+  .landing h1 {
+    font-size: 2rem;
+  }
+}
+
     }
   </style>
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
@@ -267,7 +278,7 @@
     <h2>Contact</h2>
     <div class="icons">
       <a href="mailto:sonya.r.gopinath@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
-      <a href="https://https://www.linkedin.com/in/sonya-gopinath/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.linkedin.com/in/sonya-gopinath/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
       <a href="https://github.com/yourgithub" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
       <a href="https://medium.com/@rg.sonya22/outdated-metrics-in-esg-reports-the-revenue-centric-ethos-7b7b6054fcd5" target="_blank" title="Medium"><i class="fab fa-medium"></i></a>
     </div>
