--- a/index.html
+++ b/index.html
@@ -74,19 +74,57 @@
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
 }
 
-    .project-card {
-      background: white;
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      padding: 1.5rem;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
+#about p {
+  font-size: 1.1rem;
+  line-height: 1.6;
+  max-width: 800px;
+  margin: 20px auto;
+}
 
-    .project-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 10px 20px rgba(0,0,0,0.15);
-    }
+
+    
+#projects .project-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin: 2rem 0;
+}
+
+.project-card img {
+  max-width: 300px;
+  border-radius: 8px;
+}
+
+.project-info {
+  max-width: 600px;
+  text-align: left;
+}
+
+.project-info h3 {
+  font-size: 1.8rem;
+  color: #4b3e6e;
+}
+
+.project-info p {
+  font-size: 1.1rem;
+  color: #555;
+}
+
+.project-info .button {
+  background-color: #7d6bb8;  /* lilac button */
+  color: white;
+  padding: 10px 20px;
+  border-radius: 6px;
+  text-decoration: none;
+  margin-top: 20px;
+  display: inline-block;
+}
+
+.project-info .button:hover {
+  background-color: #6a589f;
+}
+
 
     /* Write-ups Section */
 .section {
@@ -172,6 +210,11 @@
       background: #9a80cc;
     }
 
+
+#contact {
+  padding: 4rem 1rem;
+}
+
 .icons {
   display: flex;
   justify-content: center;
@@ -180,9 +223,8 @@
 }
 
 .icons a {
-  margin: 0 10px;
-  color: #333; /* Or var(--accent) if using CSS variables */
-  font-size: 28px;
+  color: #333;
+  font-size: 2rem;
   transition: color 0.3s ease, transform 0.2s ease;
 }
 
@@ -191,17 +233,41 @@
   transform: scale(1.2);
 }
 
+#contact h2 {
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+}
+
 footer {
   text-align: center;
   padding: 2rem 0;
   background: #f0edf7;
 }
 
-@media screen and (max-width: 600px) {
-  .landing h1 {
+
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  h2 {
     font-size: 2rem;
   }
+
+  .project-card {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .icons a {
+    font-size: 1.8rem;
+  }
+
+  #contact {
+    padding: 3rem 1rem;
+  }
 }
+
 
     }
   </style>
@@ -244,7 +310,7 @@ footer {
 <section id="writeups" class="section">
   <h2 class="section-title">✍️ Thoughts & Write-ups</h2>
   <p class="section-subtitle">
-    Here’s where I document what I’ve observed, questioned, and tried to understand—from climate adaptation strategies and environmental policy to the social mechanics of change.
+    Here’s where I document what I’ve observed, questioned, and tried to understand - from climate adaptation strategies and environmental policy to the social mechanics of change.
     The write-ups include short-form reflections on Medium, as well as my Master’s dissertation, which takes a data-driven look at labour productivity during heatwaves in India.
   </p>
 
@@ -266,8 +332,6 @@ footer {
     </a>
   </div>
 </section>
-
-      
 
   <section id="resume">
     <h2>Resume</h2>
