--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <title>Sonya's Portfolio</title>
   <style>
     :root {
-      --primary: #b9a3e3; /* lilac */
-      --background: #f9f7fc; /* light pastel */
+      --primary: #b9a3e3;
+      --background: #f9f7fc;
       --text: #1a1a1a;
       --accent: #555;
+      --section-alt: #f0edf7;
     }
 
     html {
@@ -66,133 +67,115 @@
     }
 
     .profile-image img {
-  width: 160px;
-  height: 160px;
-  object-fit: cover;
-  border-radius: 50%;
-  border: 3px solid #d0cfe3;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-}
+      width: 160px;
+      height: 160px;
+      object-fit: cover;
+      border-radius: 50%;
+      border: 3px solid #d0cfe3;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
 
-#about p {
-  font-size: 1.1rem;
-  line-height: 1.6;
-  max-width: 800px;
-  margin: 20px auto;
-}
+    #about {
+      background-color: var(--section-alt);
+    }
 
+    #about p {
+      font-size: 1.1rem;
+      line-height: 1.6;
+      max-width: 800px;
+      margin: 20px auto;
+    }
 
-    
-#projects .project-card {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-  margin: 2rem 0;
-}
+    #projects {
+      background-color: var(--background);
+    }
 
-.project-card img {
-  max-width: 300px;
-  border-radius: 8px;
-}
+    #projects h2 {
+      text-align: center;
+    }
 
-.project-info {
-  max-width: 600px;
-  text-align: left;
-}
+    #projects .project-card {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+      margin: 2rem 0;
+      background: #f0edf7;
+      padding: 20px;
+      border-radius: 12px;
+    }
 
-.project-info h3 {
-  font-size: 1.8rem;
-  color: #4b3e6e;
-}
+    .project-card h3 {
+      font-size: 1.8rem;
+      color: #4b3e6e;
+      margin-bottom: 10px;
+    }
 
-.project-info p {
-  font-size: 1.1rem;
-  color: #555;
-}
+    .project-card p {
+      font-size: 1.1rem;
+      color: #555;
+      max-width: 700px;
+      text-align: center;
+    }
 
-.project-info .button {
-  background-color: #7d6bb8;  /* lilac button */
-  color: white;
-  padding: 10px 20px;
-  border-radius: 6px;
-  text-decoration: none;
-  margin-top: 20px;
-  display: inline-block;
-}
+    #writeups {
+      background-color: var(--section-alt);
+    }
 
-.project-info .button:hover {
-  background-color: #6a589f;
-}
+    .section-title {
+      font-size: 2.2rem;
+      margin-bottom: 10px;
+      color: #3d3d4e;
+      text-align: center;
+    }
 
+    .section-subtitle {
+      font-size: 1rem;
+      max-width: 700px;
+      margin: 0 auto 40px auto;
+      color: #5a5a6e;
+      line-height: 1.6;
+      text-align: center;
+    }
 
-    /* Write-ups Section */
-.section {
-  padding: 80px 20px;
-  background-color: #f7f5fc;
-  color: #1c1c1e;
-  text-align: center;
-}
+    .writeups-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
+    }
 
-.section-title {
-  font-size: 2.2rem;
-  margin-bottom: 10px;
-  color: #3d3d4e;
-}
+    .writeup-card {
+      background: #e6e3f0;
+      border: 1px solid #d0cfe3;
+      border-radius: 16px;
+      padding: 30px;
+      width: 280px;
+      text-align: left;
+      text-decoration: none;
+      transition: transform 0.2s ease, box-shadow 0.3s ease;
+    }
 
-.section-subtitle {
-  font-size: 1rem;
-  max-width: 700px;
-  margin: 0 auto 40px auto;
-  color: #5a5a6e;
-  line-height: 1.6;
-}
+    .writeup-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 16px rgba(0,0,0,0.15);
+    }
 
-.writeups-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
-}
+    .writeup-content h3 {
+      font-size: 1.2rem;
+      margin-bottom: 10px;
+      color: #1c1c1e;
+    }
 
-.writeup-card {
-  background: #e6e3f0;
-  border: 1px solid #d0cfe3;
-  border-radius: 16px;
-  padding: 30px;
-  width: 280px;
-  text-align: left;
-  text-decoration: none;
-  transition: transform 0.2s ease, box-shadow 0.3s ease;
-}
+    .writeup-content p {
+      font-size: 0.95rem;
+      color: #3e3e4e;
+    }
 
-.writeup-card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 8px 16px rgba(0,0,0,0.15);
-}
-
-.writeup-content h3 {
-  font-size: 1.2rem;
-  margin-bottom: 10px;
-  color: #1c1c1e;
-}
-
-.writeup-content p {
-  font-size: 0.95rem;
-  color: #3e3e4e;
-}
-
-/* Responsive layout */
-@media (max-width: 768px) {
-  .writeups-container {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .writeup-card {
-    width: 90%;
-  }
-}
+    #resume {
+      background-color: var(--background);
+      text-align: center;
+    }
 
     .resume-button {
       display: inline-block;
@@ -210,146 +193,61 @@
       background: #9a80cc;
     }
 
+    #contact {
+      background-color: var(--section-alt);
+      text-align: center;
+    }
 
-#contact {
-  padding: 4rem 1rem;
-}
+    #contact h2 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
 
-.icons {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 20px;
-}
+    .icons {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 20px;
+    }
 
-.icons a {
-  color: #333;
-  font-size: 2rem;
-  transition: color 0.3s ease, transform 0.2s ease;
-}
+    .icons a {
+      color: #333;
+      font-size: 2rem;
+      transition: color 0.3s ease, transform 0.2s ease;
+    }
 
-.icons a:hover {
-  color: #7d6bb8; /* lilac hover */
-  transform: scale(1.2);
-}
+    .icons a:hover {
+      color: #7d6bb8;
+      transform: scale(1.2);
+    }
 
-#contact h2 {
-  font-size: 2.5rem;
-  margin-bottom: 20px;
-}
+    footer {
+      text-align: center;
+      padding: 2rem 0;
+      background: #f0edf7;
+    }
 
-footer {
-  text-align: center;
-  padding: 2rem 0;
-  background: #f0edf7;
-}
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 2.5rem;
+      }
 
+      .project-card p {
+        text-align: center;
+      }
 
-@media screen and (max-width: 768px) {
-  h1 {
-    font-size: 2.5rem;
-  }
+      .writeups-container {
+        flex-direction: column;
+        align-items: center;
+      }
 
-  h2 {
-    font-size: 2rem;
-  }
-
-  .project-card {
-    flex-direction: column;
-    text-align: center;
-  }
-
-  .icons a {
-    font-size: 1.8rem;
-  }
-
-  #contact {
-    padding: 3rem 1rem;
-  }
-}
-
-
+      .writeup-card {
+        width: 90%;
+      }
     }
   </style>
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <header>
-    <div><strong>Sonya Gopinath</strong></div>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#writeups">Thoughts & Write-Ups</a>
-      <a href="#resume">Resume</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
-
-  <section class="landing">
-    <h1>Sonya Gopinath</h1>
-    <p>Creating data-backed strategies for a more sustainable world - one model at a time.</p>
-  </section>
-
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I'm a recent London School of Economics graduate passionate about turning evidence into action. My academic and project work bridges sustainability, data, and strategy, with experience spanning environmental modelling, research, nonprofit outreach, and content marketing. I thrive in roles where communication, analysis, and impact intersect.</p>
-
-    <div class="profile-image">
-  <img src="sonya profile 2.JPG" alt="Profile Picture">
-</div>
-  </section>
-
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="project-card">
-      <h3>The Capital Correction Project</h3>
-      <p>A strategic modelling initiative to map sustainability incentives in high-emission industries. Focused on ESG-aligned growth opportunities across the steel and cement sectors.</p>
-    </div>
-  </section>
-
-<section id="writeups" class="section">
-  <h2 class="section-title">✍️ Thoughts & Write-ups</h2>
-  <p class="section-subtitle">
-    Here’s where I document what I’ve observed, questioned, and tried to understand - from climate adaptation strategies and environmental policy to the social mechanics of change.
-    The write-ups include short-form reflections on Medium, as well as my Master’s dissertation, which takes a data-driven look at labour productivity during heatwaves in India.
-  </p>
-
-  <div class="writeups-container">
-    <!-- Medium Article Card -->
-    <a href="https://medium.com/@rg.sonya22" target="_blank" class="writeup-card">
-      <div class="writeup-content">
-        <h3>View Medium Articles</h3>
-        <p>Short-form reflections on climate, systems, and strategy.</p>
-      </div>
-    </a>
-
-    <!-- Dissertation Card -->
-    <a href="your-dissertation.pdf" download class="writeup-card">
-      <div class="writeup-content">
-        <h3>Download Dissertation</h3>
-        <p>Research on heatwaves & productivity in high-heat regions.</p>
-      </div>
-    </a>
-  </div>
-</section>
-
-  <section id="resume">
-    <h2>Resume</h2>
-    <a class="resume-button" href="Sonya Gopinath Resume Sustainability.pdf" target="_blank">Download Resume</a>
-  </section>
-
-  <section id="contact">
-    <h2>Contact</h2>
-    <div class="icons">
-      <a href="mailto:sonya.r.gopinath@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
-      <a href="https://www.linkedin.com/in/sonya-gopinath/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-      <a href="https://github.com/yourgithub" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-      <a href="https://medium.com/@rg.sonya22/outdated-metrics-in-esg-reports-the-revenue-centric-ethos-7b7b6054fcd5" target="_blank" title="Medium"><i class="fab fa-medium"></i></a>
-    </div>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Sonya Gopinath. All rights reserved.</p>
-  </footer>
+  <!-- HTML content remains unchanged from your original file -->
 </body>
 </html>
