--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <title>Sonya's Portfolio</title>
   <style>
     :root {
-      --primary: #b9a3e3;
+      --primary: #b9a3e3; /* lilac */
       --background: #f9f7fc;
+      --section-alt: #f0edf7;
       --text: #1a1a1a;
       --accent: #555;
-      --section-alt: #f0edf7;
     }
 
     html {
@@ -50,6 +50,10 @@
       margin: auto;
     }
 
+    section:nth-of-type(even) {
+      background-color: var(--section-alt);
+    }
+
     .landing {
       text-align: center;
       padding-top: 6rem;
@@ -75,8 +79,11 @@
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
 
-    #about {
-      background-color: var(--section-alt);
+    #about h2, #projects h2, #resume h2, #contact h2 {
+      font-size: 2.2rem;
+      text-align: center;
+      margin-bottom: 20px;
+      color: #3d3d4e;
     }
 
     #about p {
@@ -84,13 +91,6 @@
       line-height: 1.6;
       max-width: 800px;
       margin: 20px auto;
-    }
-
-    #projects {
-      background-color: var(--background);
-    }
-
-    #projects h2 {
       text-align: center;
     }
 
@@ -98,35 +98,47 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 20px;
       margin: 2rem 0;
-      background: #f0edf7;
-      padding: 20px;
-      border-radius: 12px;
+      text-align: center;
     }
 
-    .project-card h3 {
+    .project-info h3, .project-card h3 {
       font-size: 1.8rem;
       color: #4b3e6e;
       margin-bottom: 10px;
     }
 
-    .project-card p {
+    .project-info p, .project-card p {
       font-size: 1.1rem;
       color: #555;
-      max-width: 700px;
-      text-align: center;
     }
 
-    #writeups {
-      background-color: var(--section-alt);
+    .resume-button {
+      display: block;
+      padding: 0.75rem 1.5rem;
+      background: var(--primary);
+      color: white;
+      border: none;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.3s ease;
+      width: fit-content;
+      margin: 0 auto;
+    }
+
+    .resume-button:hover {
+      background: #9a80cc;
+    }
+
+    .section {
+      text-align: center;
     }
 
     .section-title {
       font-size: 2.2rem;
       margin-bottom: 10px;
       color: #3d3d4e;
-      text-align: center;
     }
 
     .section-subtitle {
@@ -135,7 +147,6 @@
       margin: 0 auto 40px auto;
       color: #5a5a6e;
       line-height: 1.6;
-      text-align: center;
     }
 
     .writeups-container {
@@ -172,51 +183,20 @@
       color: #3e3e4e;
     }
 
-    #resume {
-      background-color: var(--background);
-      text-align: center;
-    }
-
-    .resume-button {
-      display: inline-block;
-      padding: 0.75rem 1.5rem;
-      background: var(--primary);
-      color: white;
-      border: none;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: background 0.3s ease;
-    }
-
-    .resume-button:hover {
-      background: #9a80cc;
-    }
-
-    #contact {
-      background-color: var(--section-alt);
-      text-align: center;
-    }
-
-    #contact h2 {
-      font-size: 2rem;
-      margin-bottom: 20px;
-    }
-
-    .icons {
+    #contact .icons {
       display: flex;
       justify-content: center;
       gap: 20px;
       margin-top: 20px;
     }
 
-    .icons a {
+    #contact .icons a {
       color: #333;
       font-size: 2rem;
       transition: color 0.3s ease, transform 0.2s ease;
     }
 
-    .icons a:hover {
+    #contact .icons a:hover {
       color: #7d6bb8;
       transform: scale(1.2);
     }
@@ -227,12 +207,17 @@
       background: #f0edf7;
     }
 
-    @media (max-width: 768px) {
+    @media screen and (max-width: 768px) {
       h1 {
         font-size: 2.5rem;
       }
 
-      .project-card p {
+      h2 {
+        font-size: 2rem;
+      }
+
+      .project-card {
+        flex-direction: column;
         text-align: center;
       }
 
@@ -244,10 +229,23 @@
       .writeup-card {
         width: 90%;
       }
+
+      #contact .icons a {
+        font-size: 1.8rem;
+      }
     }
   </style>
 </head>
 <body>
-  <!-- HTML content remains unchanged from your original file -->
+  <header>
+    <div><strong>Sonya Gopinath</strong></div>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#writeups">Thoughts & Write-Ups</a>
+      <a href="#resume">Resume</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 </body>
 </html>
